# rockoon

./: .gitignore  .gitreview  404.html  Dockerfile  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pre-build.sh  pyproject.toml  requirements.txt  setup.cfg  tox.ini  tox_install.sh
.github/workflows/: docs.yml
architecture/rockoon-admission/: index.html
charts/rockoon/: Chart.yaml  values.yaml
developer/: index.html
docs/: developer.md  index.md
docs/architecture/: rockoon-admission.md
docs/quick-start/: access-openstack.md  aio-installation-manual.md  aio-installation.md  introduction.md  local-clients.md  trymosk-installation-aws.md  vpn-config.md
etc/rockoon/: 01-controller-default.ini  logging.conf
kopf-patches/: 01-kopf-session-timeout.patch  02-kopf-retry-on-forbidden.patch
migration_helpers/: functions-common  globals
migration_helpers/ceph/: 01-copy_keyrings.sh
migration_helpers/cinder/: 01-configure-backends.sh
migration_helpers/database/: functions  migrate-service-db.sh
migration_helpers/dns/: 01-create-mcp1-coredns-cr.sh  02_apply_coredns_helmbundle_for_mcp1.sh  03_configure_mcp2_coredns.sh  04_add_hostalias_to_nova_resouces.sh
migration_helpers/heat/: 01-get-heat-creds.sh  create_stack.sh  server_console.yaml
migration_helpers/keystone/: 01-ensure-fernet-keys-disabled.sh  02-sync-fernet-keys.sh
rockoon/: batch_health.py  cache.py  ceph_api.py  constants.py  exception.py  health.py  helm.py  hooks.py  kube.py  layers.py  maintenance.py  openstack_utils.py  osdplstatus.py  pytest.ini  resource_view.py  secrets.py  settings.py  utils.py  version.py  websocket_client.py
search/: search_index.json
tests/: generate_crd_fixtures.py
tools/: fill_internal_svc_ips.sh  get_os_clouds.sh  get_service_account.sh  get_version.sh  regenerate_policy_outputs.py  run_with_service_account.sh  set-cluster-insecure.py
virtual_lab/: install.sh
(+1547 files in other folders)
