[metadata]
name = rockoon
author = Mirantis Inc
author_email = oscore-dev@mirantis.com
summary = Kubernetes operator to deploy OpenStack-Helm onto KaaS
description_file =
    README.md
home_page = https://mirantis.github.io/rockoon/
classifier =
    Development Status :: 1 - Alpha
    Environment :: Kubernetes
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.10

[options]
python_requires = >= 3.7
setup_requires =
    pbr

[files]
packages =
    rockoon

[options.packages.find]
where = etc

[entry_points]
console_scripts =
    osctl = rockoon.cli.osctl:main
    osctl-job-rerun = rockoon.cli.job_rerun:main
    osctl-ensure-shared-resources = rockoon.cli.ensure_shared_resources:main
    osctl-move-sensitive-data = rockoon.cli.move_secret_fields:main
    osctl-convert-credential-secrets = rockoon.cli.convert_credential_secrets:main
    osctl-ovs-ovn-migrate = rockoon.cli.ovs_ovn_migration:main
    osctl-remove-legacy-finalizer = rockoon.cli.remove_legacy_finalizer:main
    osctl-rename-octavia-certs-secret = rockoon.cli.rename_octavia_certs_secret:main
    osctl-create-nova-audit-report = rockoon.cli.create_nova_audit_report:main
wsgi_scripts =
    admission_controller = rockoon.admission.wsgi:main
    osctl-exporter = rockoon.exporter.exporter:main

[extras]
test =
    pytest!=9.0.0
    pytest-mock
    flake8<3.8
    black
    pytest-cov
    pytest-xdist
    pytest-html
    pytest-dependency
    kombu
    retry2
    parameterized
    paramiko
    exec_helpers
